--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<!-- My Projects -->
 	<section class="projects">
-		<div class=" project-title page-title"> - what i've done - </div>
+		<div class=" project-title page-title"> - recent projects - </div>
 		<div class="carousel">
 			<div class="mySlides fade">
 				<div class="numbertext">1 / 3</div>
