clouds sizing changed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!-- Opening Page -->
 	<header class="landing-page">
 		<div class="clouds">
-			<img src="just-cloud-full.png" style="width: 100%">
+			<img src="just-cloud-fulll.png" style="width: 100%">
 		</div>
 	</header>
 
