added media queries for everything

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 	<!-- Opening Page -->
 	<header class="landing-page">
-		<div class="clouds">
-			<img src="just-cloud-fulll.png" style="width: 100%">
+		<div>
+			<h1 class="title">SALINA DHUNGEL</h1>
+			<img  class="clouds" src="just-cloud-fulll.png" style="width: 100%">
 		</div>
 	</header>
 
@@ -52,7 +53,7 @@
 	<section class="about">
 		<div class="page-title about-title"> - who am i? -</div>
 			<div class="display-tiles">
-				<div class="about-para"> <p>New Zealand bred with a Nepali background, <br> I am currently studying<span class="larger">&nbsp; Computer Systems Engineering&nbsp;</span>at the University of Auckland and am<span class="large">&nbsp;super passionate&nbsp;</span>to learn and explore as much as I possibly can. <br>
+				<div class="about-para"> <p>Born and raised in New Zealand with a Nepali background, <br> I am currently studying<span class="larger">&nbsp; Computer Systems Engineering&nbsp;</span>at the University of Auckland and am<span class="large">&nbsp;super passionate&nbsp;</span>to learn and explore as much as I possibly can. <br>
 				The technology industry is always<span class="large">&nbsp;booming&nbsp;</span>with new ideas and it’s just really<span class="larger">&nbsp;inspiring&nbsp;</span>to see that every new uprising could reach so many people and have some sort of impact on their lives.<br> To be a part of an industry as<span class="large">&nbsp;fast-paced and influential&nbsp;</span>as this would really be an exciting opportunity and I am<span class="larger">&nbsp;so ready&nbsp;</span>to face the challenges and work hard to get through them. <br>Other than that, I live to spend time with my loving family and friends,<span class="large">&nbsp;cook&nbsp;</span>and share delicious meals with them, <span class="larger">&nbsp;capture memories&nbsp;</span> in films and photographs, swim on the <span class="large">&nbsp;beautiful shores of New Zealand&nbsp;</span>, travel &amp;<span class="large">&nbsp;explore&nbsp;</span>and listen to music.</p>
 
 
@@ -61,25 +62,25 @@
 				<div class="about-grid"> 
 				<!-- Photo Grid -->
 					<div class="container"> 
-					    <img src="grid/bay.jpg" style="width:100%">
-					    <img src="grid/disney.jpg" style="width:100%">					
-					    <img src="grid/monkey.jpg" style="width:100%">
-					    <img src="grid/universal.jpg" style="width:100%">
-					    <img src="grid/drone.jpg" style="width:100%">						
+					    <img src="grid/bay.jpg">
+					    <img src="grid/disney.jpg">					
+					    <img src="grid/monkey.jpg"  >
+					    <img src="grid/universal.jpg">
+					    <img src="grid/drone.jpg"  >						
 					</div>
 					<div class="container"> 
-					    <img src="grid/smallworld.jpg" style="width:100%">
-					    <img src="grid/cherry.jpg" style="width:100%">					
-					    <img src="grid/beach.jpg" style="width:100%">
-					    <img src="grid/flags.jpg" style="width:100%">	
-					    <img src="grid/mormon.jpg" style="width:100%">
+					    <img src="grid/smallworld.jpg"  >
+					    <img src="grid/cherry.jpg"  >					
+					    <img src="grid/beach.jpg"  >
+					    <img src="grid/flags.jpg"  >	
+					    <img src="grid/mormon.jpg"  >
 					</div>
 						<div class="container"> 
-					    <img src="grid/taupo.jpg" style="width:100%">
-					    <img src="grid/yay.jpg" style="width:100%">
-					    <img src="grid/snow.jpg" style="width:100%">	
-					    <img src="grid/drone2.jpg" style="width:100%">
-					    <img src="grid/teharuhi.jpg" style="width:100%">						
+					    <img src="grid/taupo.jpg"  >
+					    <img src="grid/yay.jpg"  >
+					    <img src="grid/snow.jpg"  >	
+					    <img src="grid/drone2.jpg"  >
+					    <img src="grid/teharuhi.jpg"  >						
 
 					</div>
 				</div>
@@ -98,7 +99,7 @@
 				<li><a target="_blank" href="https://github.com/SalinaDhungel" class="logo work github"><img src="logos/github.png"></a></li>
 			</ul>
 			<br>
-			<p class="contact-text social-text"> Check out my other social media</p>
+		
 			<ul class="logo-list logo-list-bottom">
 				<li><a target="_blank" href="https://www.youtube.com/channel/UCHcmL5ba2dlhijg2Okpo5nQ?view_as=subscriber" class="logo logo-bottom social youtube"><img src="logos/youtube.png"></a></li>
 				<li><a target="_blank" href="https://www.instagram.com/___salina___/" class="logo logo-bottom social ig"><img src="logos/ig.png"></a></li>
