--- a/index.html
+++ b/index.html
@@ -62,25 +62,25 @@
 				<div class="about-grid"> 
 				<!-- Photo Grid -->
 					<div class="container"> 
-					    <img src="grid/bay .JPG">
-					    <img src="grid/disney .JPG">					
-					    <img src="grid/monkey .JPG"  >
-					    <img src="grid/universal .JPG">
-					    <img src="grid/drone .JPG"  >						
+					    <img src="grid/bay.JPG">
+					    <img src="grid/disney.JPG">					
+					    <img src="grid/monkey.JPG"  >
+					    <img src="grid/universal.JPG">
+					    <img src="grid/drone.JPG"  >						
 					</div>
 					<div class="container"> 
-					    <img src="grid/smallworld .JPG"  >
-					    <img src="grid/cherry .JPG"  >					
-					    <img src="grid/beach .JPG"  >
-					    <img src="grid/flags .JPG"  >	
-					    <img src="grid/mormon .jpg"  >
+					    <img src="grid/smallworld.JPG"  >
+					    <img src="grid/cherry.JPG"  >					
+					    <img src="grid/beach.JPG"  >
+					    <img src="grid/flags.JPG"  >	
+					    <img src="grid/mormon.JPG"  >
 					</div>
 						<div class="container"> 
-					    <img src="grid/taupo .JPG"  >
-					    <img src="grid/yay .JPG"  >
-					    <img src="grid/snow .jpg"  >	
-					    <img src="grid/drone2 .JPG"  >
-					    <img src="grid/teharuhi .JPG"  >						
+					    <img src="grid/taupo.JPG"  >
+					    <img src="grid/yay.JPG"  >
+					    <img src="grid/snow.JPG"  >	
+					    <img src="grid/drone2.JPG"  >
+					    <img src="grid/teharuhi.JPG"  >						
 
 					</div>
 				</div>
