fixing case for image

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 					    <img src="grid/cherry.JPG"  >					
 					    <img src="grid/beach.JPG"  >
 					    <img src="grid/flags.JPG"  >	
-					    <img src="grid/mormon.JPG"  >
+					    <img src="grid/mormon.jpg"  >
 					</div>
 						<div class="container"> 
 					    <img src="grid/taupo.JPG"  >
 					    <img src="grid/yay.JPG"  >
-					    <img src="grid/snow.JPG"  >	
+					    <img src="grid/snow.jpg"  >	
 					    <img src="grid/drone2.JPG"  >
 					    <img src="grid/teharuhi.JPG"  >						
 
